test/modules/bradc/nestedmodule.good
Error: Can't handle nested modules yet (nestedmodule.chpl:7)
