test/modules/bradc/nestedmodule.chpl
module a {

  function runa() {
    writeln("in runa() in module a");
  }

  module aSubB {

    function runab() {
      writeln("in runab() in module aSubB");
    }

  }

}
